testsuite/tests/properties/invalid_matchers/default_after_full.lkt
import common

class ExampleNode: FooNode {
    @parse_field body: BodyNode

    fun prop(): Int = match node.body {
        case e: BodyNode => e.prop
        case _           => 1
    }
}
